fixing main image and nav bar on mobile

--- a/mobile-style.css
+++ b/mobile-style.css
@@ -19,22 +19,18 @@ header {
 
 nav ul {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center; 
     padding: 0;
     margin: 0;
 }
 
 nav ul li {
-    margin: 15px 0;
+    margin: 0 10px;
 }
 
 nav ul li a {
-    font-size: 18px;
-    padding: 10px;
-    display: block;
-    width: 100%; 
-    text-align: center; 
+    font-size: 16px;
+    padding: 5px;
 }
 
 
@@ -47,7 +43,7 @@ nav ul li a {
 }
 
 .image {
-    width: 70vw;
+    width: 50vw;
     margin-bottom: 20px;
 }
 
